...
        enter = fadeIn(),
        exit = fadeOut(),
    ) {
        Button(
            onClick = onBackwards,
            contentPadding = PaddingValues(horizontal = 24.dp, vertical = 12.dp),
            modifier = Modifier.testTag("nav_back"),
        ) {
            Icon(
                Icons.AutoMirrored.Filled.ArrowBack,
                stringResource(R.string.back)
            )
        }
...
    Button(
        onClick = onForwards,
        enabled = canContinue,
        contentPadding = PaddingValues(horizontal = 24.dp, vertical = 12.dp),
        modifier = Modifier
            .align(Alignment.CenterEnd)
            .testTag("nav_forward"),
    ) {
        AnimatedVisibility(visible = isLastPage) {
            Icon(
                Icons.Default.Check,
                "Fertig"
            )
...
        }
    }
}

@Composable
private fun NavigationPoints(page: Int, numPages: Int) {
    Row(horizontalArrangement = Arrangement.Center, modifier = Modifier.testTag("nav_dots")) {
        repeat(numPages) { iteration ->
            val color =
                if (page == iteration) MaterialTheme.colorScheme.primary
                else MaterialTheme.colorScheme.outlineVariant
            Box(
                modifier = Modifier
...
    Description(stringResource(R.string.description_data_usage_page))

    var showPrivacyPolicyDialog by remember { mutableStateOf(false) }

    TextButton(
        onClick = { showPrivacyPolicyDialog = true },
        modifier = Modifier.testTag("privacy_button")
    ) {
        Text(
            text = stringResource(R.string.privacy_policy),
            style = MaterialTheme.typography.bodyMedium
        )
    }
...
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier.padding(Spacing.medium),
        ) {
            Checkbox(
                checked = viewModel.termsAccepted,
                onCheckedChange = onAcceptedChange,
                modifier = Modifier.testTag("agreement_checkbox")
            )
            Text(
                text = stringResource(R.string.agreement_policy),
                style = MaterialTheme.typography.bodyMedium,
                color = MaterialTheme.colorScheme.onSurfaceVariant,
            )
...
